grille des etudiants

--- a/gestion_prof.csproj
+++ b/gestion_prof.csproj
@@ -165,6 +165,7 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <EmbeddedResource Include="stage.resx">
       <DependentUpon>stage.cs</DependentUpon>
@@ -194,6 +195,12 @@
       <ProductName>.NET Framework 3.5 SP1</ProductName>
       <Install>false</Install>
     </BootstrapperPackage>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\20231118_104819.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\20231118_1048191.jpg" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
