--- a/gestion_prof.csproj
+++ b/gestion_prof.csproj
@@ -139,6 +139,7 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Globals.cs" />
     <Compile Include="stage.cs">
       <SubType>Form</SubType>
     </Compile>
